Finished mobility and tuple completion/action.
Tuples are no redirected based on a minimum spanning tree that can be
used to model the entire network.